@@ -1,6 +1,6 @@
 {
   "homepage": "https://github.com/IriDark/Valoria/",
   "promos": {
-    "1.20.1-recommended": "1.20.1-0.6.4b"
+    "1.20.1-recommended": "1.20.1-0.6.3b"
   }
 }
