@@ -1,4 +1,6 @@
 # Changelog v0.6.4b
+- Fixed missing particles in Abyssal Glowfern
+
 - Added Jeweler Profession
 
 # Changelog v0.6.2 - v0.6.3b
